Added the virtual bartender app to my portfolio

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <h1 class="section-title">
                     Pro<span class="pink">j</span>ects
                 </h1>
-                <p>Here are a few of the sites I've made recently:</p>
+                <p>Here are a few of the projects I've made recently:</p>
                 <section class="projects container">
                     <div class="project-item">
                         <h1 class="project-item-header">
@@ -302,21 +302,20 @@
                     </div>
                     <div class="project-item">
                         <h1 class="project-item-header">
-                            Paterro<span class="pinkh1">'</span>s Kitchen
+                            Virtual <span class="pinkh1">B</span>artender
                         </h1>
                         <img
-                            id="paterros-img"
+                            id="bartender-img"
                             class="project-img"
-                            src="/images/pic02.png"
-                            alt="Paterro's"
+                            src="/images/bartender.png"
+                            alt="Virtual Bartender"
                         />
                         <p>
-                            A website created for a local restaurant to showcase
-                            the talent and skill of the head chef and owner.
+                            A fully responsive web application that uses the cocktailDB API to fetch drinks for the user. Provides ingredients, glassware, and instructions.
                         </p>
                         <div class="button">
                             <a
-                                href="./restaurant/index.html"
+                                href="./bartender/index.html"
                                 target="_blank"
                                 type="button"
                                 class="cta"
