--- a/bartender/index.html
+++ b/bartender/index.html
@@ -7,8 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<title>Virtual Bartender</title>
-
-		<!-- external CSS link -->
+		<link rel="icon" href="/Images/drink-icon.png" />
 		<link rel="stylesheet" href="/bartender/css/style.css">
 		<link rel="stylesheet" href="/bartender/css/normalize.css">
 	</head>
