--- a/salon/index.html
+++ b/salon/index.html
@@ -5,6 +5,7 @@
         <meta name="description" content="Your description goes here" />
         <meta name="keywords" content="one, two, three" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" href="/Images/barber.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
