Added website preview image to meta tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <title>Tyler is Coding</title>
         <link rel="stylesheet" href="../CSS/style.css" />
         <link rel="icon" href="./images/tab-icon.png" />
-        <link rel="image_src" href="./images/site-preview-image.png" />
+        <meta property=’og:title’ content='Tyler is Coding'/>
+        <meta property=’og:image’ content="./images/site-preview-image.png"/>
+        <meta property=’og:description’ content='Portfolio site for Tyler McKenna'/>
+        <meta property=’og:url’ content='https://www.tyleriscoding.com'/>
+        <meta property='og:image:width' content='567' />
+        <meta property='og:image:height' content='439' />
     </head>
     <body>
         <!-- Beginning of Header Section -->
