--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" href="../CSS/style.css" />
         <link rel="icon" href="./images/tab-icon.png" />
         <meta property=’og:title’ content='Tyler is Coding'/>
-        <meta property=’og:image’ content="./images/site-preview-image.png"/>
+        <meta property=’og:image’ content="https://www.tyleriscoding.com/images/site-preview-image.png"/>
         <meta property=’og:description’ content='Portfolio site for Tyler McKenna'/>
         <meta property=’og:url’ content='https://www.tyleriscoding.com'/>
-        <meta property='og:image:width' content='567' />
-        <meta property='og:image:height' content='439' />
+        <meta property='og:image:width' content='936' />
+        <meta property='og:image:height' content='1380' />
     </head>
     <body>
         <!-- Beginning of Header Section -->
