Added website preview image to meta tags

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <title>Tyler is Coding</title>
         <link rel="stylesheet" href="../CSS/style.css" />
         <link rel="icon" href="./images/tab-icon.png" />
-        <meta property=’og:title’ content='Tyler is Coding'/>
-        <meta property=’og:description’ content='Portfolio site for Tyler McKenna'/>
-        <meta property=’og:url’ content='https://www.tyleriscoding.com'/>
+        <meta property="og:title" content='Tyler is Coding'/>
+        <meta property="og:type" content="website">
+        <meta property="og:description" content='Portfolio site for Tyler McKenna'/>
+        <meta property="og:url" content='https://www.tyleriscoding.com'/>
         <meta name="image" property="og:image" content="https://www.tyleriscoding.com/images/site-preview-image.png">
     </head>
     <body>
