--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta property="og:description" content='Portfolio site for Tyler McKenna'/>
         <meta property="og:url" content='https://www.tyleriscoding.com'/>
         <meta name="image" property="og:image" content="https://www.tyleriscoding.com/images/site-preview-image.png">
+        <meta name="author" content="Tyler McKenna">
     </head>
     <body>
         <!-- Beginning of Header Section -->
