Added site preview image and meta tags for virtual bartender app

--- a/bartender/index.html
+++ b/bartender/index.html
@@ -5,9 +5,14 @@
   	<meta name="description" content="A cocktail generator with instructions on how to create a wide list of drinks. It includes pictures, measurements, and instructions.">
   	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
 		<title>Virtual Bartender</title>
 		<link rel="icon" href="/Images/drink-icon.png" />
+		<meta property="og:title" content='Virtual Bartender'/>
+        <meta property="og:type" content="website">
+        <meta property="og:description" content='Virtual Bartender created by Tyler McKenna'/>
+        <meta property="og:url" content='https://www.tyleriscoding.com/bartender/index.html'/>
+        <meta name="image" property="og:image" content="https://www.tyleriscoding.com/bartender/images/site-preview-image.png">
+        <meta name="author" content="Tyler McKenna">
 		<link rel="stylesheet" href="/bartender/css/style.css">
 		<link rel="stylesheet" href="/bartender/css/normalize.css">
 	</head>
