--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Portfolio site for Tyler McKenna"
+      content="Tyler McKenna's personal portfolio website."
     />
     <meta property="og:url" content="https://www.tyleriscoding.com" />
     <meta
-      name="image"
       property="og:image"
       content="https://www.tyleriscoding.com/images/site-preview-image.png"
     />
+    <meta property="og:image-alt" content="https://i.imgur.com/L9A7kFv.png" />
     <meta name="author" content="Tyler McKenna" />
   </head>
   <body>
