Playing with meta tags

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       property="og:image"
       content="https://www.tyleriscoding.com/images/site-preview-image.png"
     />
-    <meta property="og:image-alt" content="https://i.imgur.com/L9A7kFv.png" />
+    <meta property="og:image:alt" content="https://i.imgur.com/L9A7kFv.png" />
     <meta name="author" content="Tyler McKenna" />
   </head>
   <body>
