Playing with meta tags

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       property="og:description"
       content="Tyler McKenna's personal portfolio website."
     />
+    <meta
+      name="description"
+      content="Tyler McKenna's personal portfolio website."
+    />
     <meta property="og:url" content="https://www.tyleriscoding.com" />
     <meta
       property="og:image"
