Playing with meta tags

--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
     <title>Tyler is Coding</title>
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="icon" href="./images/tab-icon.png" />
+
+    <!--  Essential META Tags -->
     <meta property="og:title" content="Tyler is Coding" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:description"
-      content="Tyler McKenna's personal portfolio website."
-    />
-    <meta
-      name="description"
-      content="Tyler McKenna's personal portfolio website."
-    />
-    <meta property="og:url" content="https://www.tyleriscoding.com" />
     <meta
       property="og:image"
       content="https://www.tyleriscoding.com/images/site-preview-image.png"
     />
-    <meta property="og:image:alt" content="https://i.imgur.com/L9A7kFv.png" />
-    <meta name="author" content="Tyler McKenna" />
+    <meta property="og:url" content="https://www.tyleriscoding.com" />
+    <meta
+      name="twitter:card"
+      content="https://www.tyleriscoding.com/images/site-preview-image.png"
+    />
+
+    <!--  Non-Essential, But Recommended -->
+    <meta
+      property="og:description"
+      content="Tyler McKenna's personal software engineering portfolio."
+    />
+    <meta property="og:site_name" content="Tyler is Coding" />
+    <meta name="twitter:image:alt" content="TylerisCoding.com" />
   </head>
+
   <body>
     <!-- Beginning of Header Section -->
     <section id="navbar">
