Updated the salon website with Spectral Salon and updated all of the site descriptions.

--- a/index.html
+++ b/index.html
@@ -302,8 +302,10 @@
               alt="Silverpoint"
             />
             <p>
-              A fully responsive website for a local sneaker, clothing, and
-              watch retailer named Silverpoint Sneakers.
+              Silverpoint Sneakers is a website dedicated to providing the
+              latest and greatest in sneaker fashion. With a wide variety of
+              styles and brands to choose from, Silverpoint Sneakers is the
+              ultimate destination for sneaker enthusiasts.
             </p>
             <div class="button-section">
               <div class="button">
@@ -340,9 +342,10 @@
               alt="Virtual Bartender"
             />
             <p>
-              A fully responsive web application that uses the cocktailDB API to
-              fetch drinks for the user. Provides ingredients, glassware, and
-              instructions.
+              Virtual Bartender is a website that allows users to discover and
+              create delicious cocktails using the cocktailDB API. With a
+              user-friendly interface, users can easily browse through a wide
+              variety of cocktail recipes.
             </p>
             <div class="button-section">
               <div class="button">
@@ -370,17 +373,20 @@
           </div>
           <div class="project-item">
             <h1 class="project-item-header">
-              Ayesha<span class="pinkh1">'</span>s Salon
+              Spectra<span class="pinkh1">l</span> Salon
             </h1>
             <img
               id="salon-img"
               class="project-img"
               src="/images/pic03.png"
-              alt="Ayesha's"
+              alt="Spectral Salon"
             />
+
             <p>
-              A website created for a local hair salon. It showcases the owners
-              skills with a lookbook and descriptions of services provided.
+              Spectral Salon is a website that offers a wide range of beauty and
+              grooming services for men and women. Services offered may include
+              hair cutting, coloring, styling, nail care, waxing, facials, and
+              more.
             </p>
             <div class="button-section">
               <div class="button">
