--- a/salon/index.html
+++ b/salon/index.html
@@ -1,186 +1,229 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="description" content="Your description goes here" />
-        <meta name="keywords" content="one, two, three" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="/Images/barber.png" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap"
-            rel="stylesheet"
-        />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap"
-            rel="stylesheet"
-        />
-        <title>Ayesha's Hair Salon</title>
-        <!-- external CSS link -->
-        <link rel="stylesheet" href="css/normalize.css" />
-        <link rel="stylesheet" href="css/style.css" />
-    </head>
-    <body>
-        <header>
-            <nav>
-                <div class="AyeshaLogo">
-                    <h1>Ayesha</h1>
-                </div>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  <head>
+    <title>Spectral Salon | Home</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="icon" href="./images/barber.png" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="landing is-preload">
+    <!-- Page Wrapper -->
+    <div id="page-wrapper">
+      <!-- Header -->
+      <header id="header" class="alt">
+        <h1><a href="index.html">Spectral Salon</a></h1>
+        <nav id="nav">
+          <ul>
+            <li class="special">
+              <a href="#menu" class="menuToggle"><span>Menu</span></a>
+              <div id="menu">
                 <ul>
-                    <li><a href="#hero">HOME</a></li>
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#services">SERVICES</a></li>
-                    <li><a href="#lookbook">LOOKBOOK</a></li>
-                    <li><a href="#hero">CONTACT</a></li>
-                    <li class="searchIcon">
-                        <img src="images/search.png" alt="Search Icon" />
-                    </li>
-                    <li class="shoppingIcon">
-                        <img src="images/basket.png" alt="Shopping Bag" />
-                    </li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="team.html">Meet the Team</a></li>
+                  <li><a href="services.html">Services</a></li>
+                  <li><a href="book.html">Book Appointment</a></li>
+                  <li><a href="testimonials.html">Testimonials</a></li>
                 </ul>
-                <div class="bookOnline"><a href="#hero">- BOOK ONLINE</a></div>
-            </nav>
-        </header>
-        <main>
-            <section class="hero" id="hero">
-                <section>
-                    <h1>COLOR<br />& HIGHLIGHTS</h1>
-                    <h4>
-                        DEFINE YOUR UNIQUE STYLE WITH OUR TALENTED BEAUTICIANS
-                    </h4>
-                    <a href="#services">- OUR SERVICES</a>
-                    <section class="black-box">
-                        <h3>YOUR FIRST VISIT?</h3>
-                        <h2>
-                            <span>-20% </span> FOR THE FIRST<br />CLASSIC HAIR
-                            COLORING
-                        </h2>
-                        <a href="#">- BOOK ONLINE</a>
-                    </section>
-                </section>
-            </section>
-            <section id="services" class="services">
-                <section class="service">
-                    <img src="images/barber.png" alt="Beautician" />
-                    <h4>EXPERT BEAUTICIANS</h4>
-                    <p>
-                        Ayesha and her wonderful staff have over 60 years of
-                        combined experience. Each of them has been expertly
-                        trained and can assist you in achieving your ideal
-                        hairstyle for any occasion.
-                    </p>
-                </section>
-                <section class="service">
-                    <img src="images/chair.png" alt="Chair" />
-                    <h4>QUALITY SERVICES</h4>
-                    <p>
-                        Ayesha and her team provide not only haircutting and
-                        styling, but also colors, perms, nail treatment,
-                        facials, aromatherapy, hair removal, and more.
-                    </p>
-                </section>
-                <section class="service">
-                    <img src="images/powder.png" alt="Products" />
-                    <h4>BEAUTY PRODUCTS</h4>
-                    <p>
-                        Ayesha works and is partnered with the top vendors in
-                        the beauty industry. An authorized provider of brands
-                        such as Paul Mitchell, Matrix, Shu Uemura, and more.
-                        Inquire within!
-                    </p>
-                </section>
-            </section>
-            <section class="momentum" id="about">
-                <section class="momentum-left">
-                    <h4>MAKE THE BEST<br />OF YOUR MOMENTS</h4>
-                    <p>
-                        Let our staff make the most memorable days in your life
-                        even more special by giving you the exact style you're
-                        looking for. Weddings, birthdays, and any other special
-                        event will be captured by many. Let us make sure that
-                        you look your best.
-                    </p>
-                    <a href="#hero">- READ MORE</a>
-                </section>
-                <section class="momentum-right">
-                    <video
-                        src="#"
-                        controls
-                        width="400"
-                        height="300"
-                        poster="images/video-poster.jpg"
-                    ></video>
-                </section>
-            </section>
-            <section class="stylists-header">
-                <h2>OUR STYLISTS</h2>
-                <span>_</span>
-            </section>
-            <section class="stylists">
-                <section class="stylist">
-                    <img src="images/stylist-1.jpg" alt="Alita" />
-                    <section>
-                        <h5>ALITA WILLIAMS</h5>
-                        <span>- COLORIST</span>
-                    </section>
-                </section>
-                <section class="stylist">
-                    <img src="images/stylist-2.jpg" alt="Ayesha" />
-                    <section>
-                        <h5>AYESHA LAKE</h5>
-                        <span>- OWNER AND STYLIST</span>
-                    </section>
-                </section>
-                <section class="stylist">
-                    <img src="images/stylist-3.jpg" alt="Smith" />
-                    <section>
-                        <h5>MICHELLE SMITH</h5>
-                        <span>- BEAUTICIAN</span>
-                    </section>
-                </section>
-            </section>
-            <section class="coupon">
-                <h4>COLOR DAY OFFER!</h4>
-                <h2><span>-10% </span> ON HAIRCUT<br />COLOR AND HIGHLIGHT</h2>
-                <a href="#hero"> - BOOK APPOINTMENT</a>
-            </section>
-            <section class="lookbook" id="lookbook">
-                <section class="look-header">
-                    <h2>OUR LOOKBOOK</h2>
-                    <span>_</span>
-                </section>
-                <section class="look-container">
-                    <section class="look-col">
-                        <img src="images/style1.jpg" alt="Style 1" />
-                        <img src="images/style2.jpg" alt="Style 2" />
-                    </section>
-                    <section class="look-col">
-                        <img src="images/style3.jpg" alt="Style 3" />
-                        <img src="images/style4.jpg" alt="Style 4" />
-                    </section>
-                    <section class="look-col">
-                        <img src="images/style5.jpg" alt="Style 5" />
-                        <img src="images/style6.jpg" alt="Style 6" />
-                    </section>
-                </section>
-            </section>
-            <footer>
-                <section class="footer">
-                    <ul id="copyright">
-                        <li>&copy; Tyler McKenna. All rights reserved.</li>
-                        <li>
-                            Based on a design from
-                            <a
-                                href="https://themeforest.net/item/ayesha-hairdressers-and-beauty-salons-wordpress-theme/24360479"
-                                >Droplett</a
-                            >
-                        </li>
-                    </ul>
-                </section>
-            </footer>
-        </main>
-        <script type="text/javascript" src="js/main.js"></script>
-    </body>
+              </div>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      <!-- Banner -->
+      <section id="banner">
+        <div class="inner">
+          <h2>Spectral Salon</h2>
+          <p>
+            Your modern salon experience   
+          </p>
+          <ul class="actions special">
+            <li><a href="#one" class="button primary scrolly">Let's get started</a></li>
+          </ul>
+        </div>
+        <a href="#one" class="more scrolly">Learn More</a>
+      </section>
+
+      <!-- One -->
+      <section id="one" class="wrapper style2 special">
+        <div class="inner">
+          <header class="major">
+            <h2>
+              Let us help you define your unique style with<br />
+              our dedicated team of talented beauticians
+            </h2>
+            <p>
+              Our team has over 30 years of combined experience. <br />
+              Explore our site and see if we can help you today!
+            </p>
+          </header>
+          <ul class="icons major">
+            <li>
+              <span class="icon solid fa-scissors major style3"></span>
+                <span class="label"></span
+              ></span>
+            </li>
+            <li>
+              <span class="icon solid fa-hand-sparkles major style3"
+                ><span class="label"></span
+              ></span>
+            </li>
+            <li>
+              <span class="icon solid fa-sink major style3"
+                ><span class="label"></span
+              ></span>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Two -->
+      <section id="two" class="wrapper alt style2">
+        <section class="spotlight">
+          <div class="image"><img src="images/team.jpg" alt="" /></div>
+          <div class="content">
+            <h2>
+              Experienced beauticians
+            </h2>
+            <p>
+              Our fun and talented team of beauticians has over 30 years of combined experience. We do almost everything under the sun and have the track record to back it up! Make sure to check our customer testimonials.
+            </p>
+          </div>
+        </section>
+        <section class="spotlight">
+          <div class="image"><img src="images/facilities.jpg" alt="Modern facilities" /></div>
+          <div class="content">
+            <h2>
+              Modern design and facilities
+            </h2>
+            <p>
+             We just recently just did a major facelift on our salon! Our absolutely gorgeous facility has a wonderful view of Boston and has every modern amenity that you could want from your beautician.
+            </p>
+          </div>
+        </section>
+        <section class="spotlight">
+          <div class="image"><img src="images/happy-customer.jpg" alt="" /></div>
+          <div class="content">
+            <h2>
+             Customer satisfaction
+            </h2>
+            <p>
+              We have been in business for over 15 years and can guarantee you will leave feeling your most confident. Allow us to get you prepared for the big events in your life, give you a new style, or keep you looking sharp.
+            </p>
+          </div>
+        </section>
+      </section>
+
+      <!-- Three -->
+      <section id="three" class="wrapper style2 special">
+        <div class="inner">
+          <header class="major">
+            <h2>Our Services</h2>
+            <p>
+             Please navigate to the Services page to see detailed pricing.
+            </p>
+          </header>
+          <ul class="features">
+            <li class="icon solid fa-scissors">
+              <a href="./services.html"> 
+                <h3>Hair cut and style</h3>
+              </a>
+            </li>
+            <li class="icon solid fa-sink">
+              <a href="./services.html"> 
+              <h3>Color and Highlights</h3>
+              </a>
+            </li>
+            <li class="icon solid fa-hand-sparkles">
+              <a href="./services.html"> 
+              <h3>Nails</h3>
+              </a>
+            </li>
+            <li class="icon solid fa-pump-soap">
+              <a href="./services.html"> 
+              <h3>Waxing</h3>
+              </a>
+            </li>
+            <li class="icon solid fa-paint-brush">
+              <a href="./services.html"> 
+              <h3>Makeup</h3>
+              </a>
+            </li>
+            <li class="icon solid fa-mask">
+              <a href="./services.html"> 
+              <h3>Facials</h3>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- CTA -->
+      <section id="cta" class="wrapper style4">
+        <div class="inner">
+          <header>
+            <h2>Book an appointment</h2>
+            <p>
+              Our time slots fill very quickly so make sure to check our online booking service to make a reservation.
+            </p>
+          </header>
+          <ul class="actions stacked">
+            <li><a href="book.html" class="button fit primary">Book Now</a></li>
+            <li><a href="#" class="button fit">Learn More</a></li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer id="footer">
+        <ul class="icons">
+          <li>
+            <a href="#" class="icon brands fa-twitter"
+              ><span class="label">Twitter</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="icon brands fa-facebook-f"
+              ><span class="label">Facebook</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="icon brands fa-instagram"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="icon solid fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+        <ul class="copyright">
+          <li>&copy; Tyler McKenna 2023</li>
+          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+      </footer>
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
