Fixed a typo and changed the styling on the salon testimonal page

--- a/salon/team.html
+++ b/salon/team.html
@@ -92,7 +92,7 @@
                   /></span>
                 </div>
                 <p>
-                  Halle has worked at Spectral Salon for 8 years. She graduated
+                  Sarah has worked at Spectral Salon for 8 years. She graduated
                   from Rob Roy Academy in Worcester and continues to educate
                   herself on all the new color/cutting trends and techniques.
                   She strives to have every client leave her chair feeling
