Changed the services section styling

--- a/salon/services.html
+++ b/salon/services.html
@@ -56,27 +56,27 @@
           <div class="inner">
             <h4>Hair Services</h4>
             <div class="table-wrapper">
-              <table class="alt">
+              <table>
                 <tbody>
                   <tr>
                     <td>Haircut and Style</td>
-                    <td>$60+</td>
+                    <td class="cost">$60+</td>
                   </tr>
                   <tr>
                     <td>Junior Stylist (When Available)</td>
-                    <td>$55</td>
+                    <td class="cost">$55</td>
                   </tr>
                   <tr>
                     <td>Wash and Style</td>
-                    <td>$45+</td>
+                    <td class="cost">$45+</td>
                   </tr>
                   <tr>
                     <td>Intense Conditioning Treatment</td>
-                    <td>$30+</td>
+                    <td class="cost">$30+</td>
                   </tr>
                   <tr>
                     <td>Upstyle</td>
-                    <td>$100+</td>
+                    <td class="cost">$100+</td>
                   </tr>
                 </tbody>
               </table>
@@ -84,27 +84,27 @@
             <br />
             <h4>Hair Color and Processing</h4>
             <div class="table-wrapper">
-              <table class="alt">
+              <table>
                 <tbody>
                   <tr>
                     <td>Single Process Color and Glaze</td>
-                    <td>$89+</td>
+                    <td class="cost">$89+</td>
                   </tr>
                   <tr>
                     <td>Partial Highlight and Glaze</td>
-                    <td>$155+</td>
+                    <td class="cost">$155+</td>
                   </tr>
                   <tr>
                     <td>Full Highlight and Glaze</td>
-                    <td>$185+</td>
+                    <td class="cost">$185+</td>
                   </tr>
                   <tr>
                     <td>Balayage and Glaze</td>
-                    <td>$250+</td>
+                    <td class="cost">$250+</td>
                   </tr>
                   <tr>
                     <td>Highlight, Base Color, and Glaze</td>
-                    <td>$205+</td>
+                    <td class="cost">$205+</td>
                   </tr>
                 </tbody>
               </table>
@@ -112,31 +112,31 @@
             <br />
             <h4>Nails</h4>
             <div class="table-wrapper">
-              <table class="alt">
+              <table>
                 <tbody>
                   <tr>
                     <td>Acrylic Fill with Gel Polish</td>
-                    <td>$45</td>
+                    <td class="cost">$45</td>
                   </tr>
                   <tr>
                     <td>Acrylic Full Set with Gel Polish</td>
-                    <td>$155+</td>
+                    <td class="cost">$155+</td>
                   </tr>
                   <tr>
                     <td>Acrylic Removal</td>
-                    <td>$12</td>
+                    <td class="cost">$12</td>
                   </tr>
                   <tr>
                     <td>Dip</td>
-                    <td>$47</td>
+                    <td class="cost">$47</td>
                   </tr>
                   <tr>
                     <td>Dip with Extensions</td>
-                    <td>$57</td>
+                    <td class="cost">$57</td>
                   </tr>
                   <tr>
                     <td>Dip Removal</td>
-                    <td>$12</td>
+                    <td class="cost">$12</td>
                   </tr>
                 </tbody>
               </table>
@@ -144,19 +144,19 @@
             <br />
             <h4>Waxing</h4>
             <div class="table-wrapper">
-              <table class="alt">
+              <table>
                 <tbody>
                   <tr>
-                    <td>Brows</td>
-                    <td>$20</td>
+                    <td>Eyebrows</td>
+                    <td class="cost">$20</td>
                   </tr>
                   <tr>
                     <td>Lip</td>
-                    <td>$12</td>
+                    <td class="cost">$12</td>
                   </tr>
                   <tr>
                     <td>Chin</td>
-                    <td>$12</td>
+                    <td class="cost">$12</td>
                   </tr>
                 </tbody>
               </table>
