--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -1,209 +1,216 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="description" content="Your description goes here" />
-        <meta name="keywords" content="one, two, three" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Paterro's Kitchen</title>
-        <!-- external CSS link -->
-        <link rel="stylesheet" href="css/normalize.css" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<!--
+	Landed by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  <head>
+    <title>Paterro's Kitchen | Home</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload landing">
+    <div id="page-wrapper">
+      <!-- Header -->
+      <header id="header">
+        <h1 id="logo"><a href="index.html">Paterro's Kitchen</a></h1>
+        <nav id="nav">
+          <ul>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="reservation.html">Reservations</a></li>
+          </ul>
+        </nav>
+      </header>
 
-        <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Yeseva+One&display=swap"
-            rel="stylesheet"
-        />
-    </head>
+      <!-- Banner -->
+      <section id="banner">
+        <div class="content">
+          <header>
+            <h2>Welcome to Paterro's Kitchen</h2>
+            <p>Where fresh ingredients and homemade recipes come together</p>
+          </header>
+          <span class="image"
+            ><img src="images/paterro.jpg" alt="Paterro"
+          /></span>
+        </div>
+        <a href="#one" class="goto-next scrolly">Next</a>
+      </section>
 
-    <body>
-        <header class="header">
-            <nav>
-                <ul>
-                    <li class="logo"><a href="#hero">Paterro's Kitchen</a></li>
-                    <li><a href="#hero">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#menu">Menu</a></li>
-                    <li><a href="#hours">Hours</a></li>
-                    <li><a href="#reviews">Reviews</a></li>
-                    <li class="cart">
-                        <img src="images/cart.png" alt="Cart Icon" />
-                    </li>
-                    <li class="search">
-                        <img src="images/search.png" alt="Search Icon" />
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <section class="hero" id="hero">
-            <section class="hero-flex">
-                <h1>
-                    Welcome to<br />
-                    Paterro's<br />Kitchen
-                </h1>
-                <section class="searchbar">
-                    <form action="#">
-                        <input type="text" placeholder="Search here" />
-                    </form>
-                    <select name="location" id="location">
-                        <option value="default">Location</option>
-                        <option value="boston">Boston</option>
-                        <option value="newYork">New York</option>
-                        <option value="chicago">Chicago</option>
-                    </select>
-                </section>
-                <section class="socials">
-                    <span
-                        ><img
-                            src="images/facebook.png"
-                            alt="Facebook"
-                        />252k</span
-                    >
-                    <span
-                        ><img src="images/twitter.png" alt="Twitter" />62k</span
-                    >
-                    <span
-                        ><img
-                            src="images/instagram.png"
-                            alt="Instagram"
-                        />55k</span
-                    >
-                </section>
-            </section>
-        </section>
-        <section class="story" id="about">
-            <section class="story-content">
-                <h4 class="section-h4">About us</h4>
-                <h2 class="section-h2">Discover Our<br />Restaurant Story</h2>
+      <!-- One -->
+      <section id="one" class="spotlight style1 bottom">
+        <span class="image fit main"
+          ><img src="images/section-1.jpg" alt="Main room"
+        /></span>
+        <div class="content">
+          <div class="container">
+            <div class="row">
+              <div class="col-4 col-12-medium">
+                <header>
+                  <h2>Authentic Italian Cuisine</h2>
+                  <p>
+                    Let Anthony Paterro and his team make you your next meal
+                  </p>
+                </header>
+              </div>
+              <div class="col-4 col-12-medium">
                 <p>
-                    Paterro's was founded by world star chef Anthony Paterro in
-                    2012 with his wife Angelica. Since 2012, they have expanded
-                    their restaurant into two more locations. One in Chicago and
-                    one in New York City. This Italian-Mediterranean fusion
-                    restaurant was the talk of Boston and has since been
-                    featured in the Improper Bostonian, Phantom Gourmet, and
-                    many other publications.
+                  Paterro's Kitchen is an Italian restaurant that offers a warm
+                  and inviting atmosphere for diners to enjoy a delicious meal.
+                  The menu features traditional Italian dishes made with fresh
+                  ingredients and cooked to perfection. Standout menu items
+                  include homemade pasta dishes, wood-fired pizzas, and
+                  mouth-watering seafood options.
                 </p>
-                <br />
+              </div>
+              <div class="col-4 col-12-medium">
                 <p>
-                    If you're in the mood for some serious flavor and healthy,
-                    delicious, Italian-Mediterranean cuisine; please make a
-                    reservation below as we do book fast. Thanks for visiting.
+                  Paterro's Kitchen is known for its friendly and attentive
+                  staff, who are dedicated to making sure every guest has a
+                  memorable dining experience. The restaurant's rustic decor,
+                  complete with exposed brick walls and dim lighting, creates a
+                  cozy and intimate setting that is perfect for romantic dinners
+                  or family gatherings.
                 </p>
-                <a href="#menu"
-                    ><span class="discover-menu">Discover Menu</span
-                    ><!--
-                --><span class="arrow-right"
-                        ><img src="images/arrow.png" alt="arrow" /></span
-                ></a>
-            </section>
-        </section>
-        <section class="specialties" id="menu">
-            <section class="specialty-top">
-                <h4 class="section-h4">Order Online Now</h4>
-                <h2 class="section-h2">Our Specialty Cuisine</h2>
-                <ul>
-                    <li class="meal-tab">
-                        <a href="#">Breakfast</a>
-                    </li>
-                    <li class="meal-tab">
-                        <a href="#">Lunch</a>
-                    </li>
-                    <li class="meal-tab">
-                        <a href="#">Dinner</a>
-                    </li>
-                    <li class="meal-tab">
-                        <a href="#">Dessert</a>
-                    </li>
-                    <li class="meal-tab">
-                        <a href="#">Shakes</a>
-                    </li>
-                </ul>
-            </section>
-            <section class="specialty-items">
-                <img src="images/food1.jpg" alt="Food 1" />
-                <img src="images/food2.jpg" alt="Food 2" />
-                <img src="images/food3.jpg" alt="Food 3" />
-                <img src="images/food4.jpg" alt="Food 4" />
-            </section>
-        </section>
-        <section class="hours" id="hours">
-            <h4 class="section-h4">Book Table</h4>
-            <h2 class="section-h2">Opening Hours</h2>
-            <img src="images/phone.png" alt="Phone Icon" />
-            <span>Call Now</span>
-            <span>(617) 555 - 2331</span>
-            <section class="hour-blocks">
-                <section class="days">
-                    <span>Monday to Tuesday</span>
-                    <span>9:00 am - 9:00 pm</span>
-                </section>
-                <section class="days">
-                    <span>Wednesday to Sunday</span>
-                    <span>11:00 am - 10:00 pm</span>
-                </section>
-            </section>
-            <section class="video">
-                <video
-                    id="cookingVideo"
-                    src="images/pizza.mp4"
-                    poster="images/video.jpg"
-                    preload="none"
-                    controls
-                ></video>
-            </section>
-        </section>
-        <section class="reviews" id="reviews">
-            <h4 class="section-h4">Testimonials</h4>
-            <h2 class="section-h2">Customers Say</h2>
-            <section class="customer">
-                <img src="images/customer.png" alt="Customer Image" />
-                <h3>John Smith</h3>
-                <span>Art Director</span>
-                <section class="stars">
-                    <img src="images/star.png" alt="Star" />
-                    <img src="images/star.png" alt="Star" />
-                    <img src="images/star.png" alt="Star" />
-                    <img src="images/star.png" alt="Star" />
-                    <img src="images/star.png" alt="Star" />
-                </section>
-            </section>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a href="#two" class="goto-next scrolly">Next</a>
+      </section>
+
+      <!-- Two -->
+      <section id="two" class="spotlight style2 right">
+        <span class="image fit main"
+          ><img src="images/section-2.jpg" alt=""
+        /></span>
+        <div class="content">
+          <header>
+            <h2>Inviting Family Atmosphere</h2>
+            <p>Let us host your next gathering</p>
+          </header>
+          <p>
+            Paterro's Kitchen's dining room is warm and inviting, with a rustic
+            decor that creates a cozy and intimate atmosphere. The exposed brick
+            walls add to the rustic charm of the space, while the dim lighting
+            sets a romantic and inviting ambiance.
+          </p>
+          <p>
+            The room is designed to make guests feel comfortable and at home,
+            with comfortable seating and a casual yet elegant atmosphere. The
+            dim lighting creates a relaxing and intimate setting perfect for
+            romantic dinners, family gatherings or any kind of occasion.
+          </p>
+          <ul class="actions">
+            <li><a href="./about.html" class="button">Learn More</a></li>
+          </ul>
+        </div>
+        <a href="#three" class="goto-next scrolly">Next</a>
+      </section>
+
+      <!-- Three -->
+      <section id="three" class="spotlight style3 left">
+        <span class="image fit main bottom"
+          ><img src="images/section-3.jpg" alt=""
+        /></span>
+        <div class="content">
+          <header>
+            <h2>Fresh Authentic Ingredients</h2>
+            <p>A taste of Italy</p>
+          </header>
+          <p>
+            Paterro's Kitchen's menu features a wide variety of traditional
+            Italian dishes made with fresh ingredients and cooked to perfection.
+            The menu is designed to showcase the best of Italian cuisine, with
+            something to suit every taste.
+          </p>
+          <ul class="actions">
+            <li><a href="./menu.html" class="button">Learn More</a></li>
+          </ul>
+        </div>
+        <a href="#four" class="goto-next scrolly">Next</a>
+      </section>
+
+      <!-- Four -->
+      <section id="four" class="wrapper style1 special fade">
+        <div class="container">
+          <header>
+            <h2>Join our mailing list.</h2>
             <p>
-                What can I say about Paterro's that hasn't already been said?
-                This place is amazing. From the decor, the lively dining
-                environment, and absolutely delectable cuisine, this place has
-                quickly become one of my favorite spots. I have taken friends,
-                dates, and business associates to Paterro's and they have all
-                been amazed. Thank you Chef Paterro for blessing us with such a
-                wonderful dining experience.
+              Receive the newest updates about the restaurant. Right to your
+              inbox.
             </p>
-        </section>
-        <footer>
-            <ul id="copyright">
-                <li>&copy; 2022 Tyler McKenna. All rights reserved.</li>
-                <li>
-                    Design based on
-                    <a href="https://dribbble.com/mithunray">Mithun Ray's</a>
-                </li>
-                <li>
-                    Stock footage provided by
-                    <a
-                        class="link author-link-popup"
-                        target="_blank"
-                        href="https://www.videvo.net/profile/videvo"
-                        >Videvo</a
-                    >, downloaded from
-                    <a
-                        class="videvo-redirect"
-                        target="_blank"
-                        href="https://www.videvo.net"
-                        >videvo.net</a
-                    >
-                </li>
-            </ul>
-        </footer>
-        <script type="text/javascript" src="js/main.js"></script>
-    </body>
+          </header>
+          <form method="post" action="#" class="cta">
+            <div class="row gtr-uniform gtr-50">
+              <div class="col-8 col-12-xsmall">
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="Your Email Address"
+                />
+              </div>
+              <div class="col-4 col-12-xsmall">
+                <input type="submit" value="Submit" class="fit alt disabled" />
+              </div>
+            </div>
+          </form>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer id="footer">
+        <ul class="icons">
+          <li>
+            <a href="https://www.twitter.com" class="icon brands fa-twitter"
+              ><span class="label">Twitter</span></a
+            >
+          </li>
+          <li>
+            <a href="https://www.facebook.com" class="icon brands fa-facebook-f"
+              ><span class="label">Facebook</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/"
+              class="icon brands fa-instagram"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a href="https://www.gmail.com" class="icon solid fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+        <ul class="copyright">
+          <li>&copy; Tyler McKenna 2023 | All rights reserved.</li>
+          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+      </footer>
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
