Updated portfolio pieces

--- a/index.html
+++ b/index.html
@@ -333,24 +333,24 @@
           </div>
           <div class="project-item">
             <h1 class="project-item-header">
-              Virtual <span class="pinkh1">B</span>artender
+              Paterro<span class="pinkh1">'</span>s Kitchen
             </h1>
             <img
               id="bartender-img"
               class="project-img"
-              src="/images/bartender.png"
-              alt="Virtual Bartender"
+              src="/images/pic02.png"
+              alt="Paterro's Kitchen"
             />
             <p>
-              Virtual Bartender is a website that allows users to discover and
-              create delicious cocktails using the cocktailDB API. With a
-              user-friendly interface, users can easily browse through a wide
-              variety of cocktail recipes.
+              Paterro's Kitchen is a visually appealing website designed to
+              showcase the restaurant's authentic Italian food and charming
+              atmosphere. The site features a clean, modern layout, high-quality
+              images and a reservation page.
             </p>
             <div class="button-section">
               <div class="button">
                 <a
-                  href="./bartender/index.html"
+                  href="./restaurant/index.html"
                   target="_blank"
                   type="button"
                   class="cta"
@@ -359,7 +359,7 @@
               </div>
               <div class="button">
                 <a
-                  href="https://github.com/TylerIsCoding/TylerIsCoding.com/tree/main/bartender"
+                  href="https://github.com/TylerIsCoding/TylerIsCoding.com/tree/main/restaurant"
                   target="_blank"
                   type="button"
                   class="cta github"
