Added pizza icon

--- a/restaurant/reservation.html
+++ b/restaurant/reservation.html
@@ -16,6 +16,7 @@
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
+    <link rel="icon" href="../images/pizza.png" />
   </head>
   <body class="is-preload">
     <div id="page-wrapper">
