Updated profile picture

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </div>
           <div class="col-right">
             <div class="about-img">
-              <img src="/images/profile-img.jpg" alt="Image of Tyler" />
+              <img src="/images/Portrait.png" alt="Image of Tyler" />
             </div>
           </div>
         </div>
@@ -293,46 +293,6 @@
         <section class="projects container">
           <div class="project-item">
             <h1 class="project-item-header">
-              Silverpoin<span class="pinkh1">t</span> Sneakers
-            </h1>
-            <img
-              id="silverpoint-img"
-              class="project-img"
-              src="/images/pic01.png"
-              alt="Silverpoint"
-            />
-            <p>
-              Silverpoint Sneakers is a website dedicated to providing the
-              latest and greatest in sneaker fashion. With a wide variety of
-              styles and brands to choose from, Silverpoint Sneakers is the
-              ultimate destination for sneaker enthusiasts.
-            </p>
-            <div class="button-section">
-              <div class="button">
-                <a
-                  href="./shoe-store/index.html"
-                  target="_blank"
-                  type="button"
-                  class="cta"
-                  >Visit</a
-                >
-              </div>
-              <div class="button">
-                <a
-                  href="https://github.com/TylerIsCoding/TylerIsCoding.com/tree/main/shoe-store"
-                  target="_blank"
-                  type="button"
-                  class="cta github"
-                  ><img
-                    src="./Images/icon-github-small.png"
-                    class="button-image-git"
-                  />GitHub</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="project-item">
-            <h1 class="project-item-header">
               Paterro<span class="pinkh1">'</span>s Kitchen
             </h1>
             <img
@@ -360,6 +320,46 @@
               <div class="button">
                 <a
                   href="https://github.com/TylerIsCoding/TylerIsCoding.com/tree/main/restaurant"
+                  target="_blank"
+                  type="button"
+                  class="cta github"
+                  ><img
+                    src="./Images/icon-github-small.png"
+                    class="button-image-git"
+                  />GitHub</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="project-item">
+            <h1 class="project-item-header">
+              Silverpoin<span class="pinkh1">t</span> Sneakers
+            </h1>
+            <img
+              id="silverpoint-img"
+              class="project-img"
+              src="/images/pic01.png"
+              alt="Silverpoint"
+            />
+            <p>
+              Silverpoint Sneakers is a website dedicated to providing the
+              latest and greatest in sneaker fashion. With a wide variety of
+              styles and brands to choose from, Silverpoint Sneakers is the
+              ultimate destination for sneaker enthusiasts.
+            </p>
+            <div class="button-section">
+              <div class="button">
+                <a
+                  href="./shoe-store/index.html"
+                  target="_blank"
+                  type="button"
+                  class="cta"
+                  >Visit</a
+                >
+              </div>
+              <div class="button">
+                <a
+                  href="https://github.com/TylerIsCoding/TylerIsCoding.com/tree/main/shoe-store"
                   target="_blank"
                   type="button"
                   class="cta github"
