--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </div>
           <div class="col-right">
             <div class="about-img">
-              <img src="/images/Portrait.png" alt="Image of Tyler" />
+              <img src="/images/Portrait-small.png" alt="Image of Tyler" />
             </div>
           </div>
         </div>
