Updated business link for instagram and changed my SEO photo

--- a/index.html
+++ b/index.html
@@ -618,7 +618,9 @@
                 /></a>
               </div>
               <div class="social-item">
-                <a href="https://www.instagram.com/yeoldeknob/" target="_blank"
+                <a
+                  href="https://www.instagram.com/tyler_is_coding/"
+                  target="_blank"
                   ><img src="/Images/icon-instagram.png" alt="Instagram"
                 /></a>
               </div>
