Added my name to my website

--- a/index.html
+++ b/index.html
@@ -233,9 +233,10 @@
             </header>
             <hr />
             <p>
-              I am a software engineer based in Boston, Massachusetts and I am
-              passionate about helping clients and businesses increase their web
-              presence by building responsive and beautiful websites.
+              My name is Tyler McKenna and I am a software engineer based in
+              Boston, Massachusetts and I am passionate about helping clients
+              and businesses increase their web presence by building responsive
+              and beautiful websites.
             </p>
             <div class="content">
               <p>
