Added my name to my website

--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
             <hr />
             <p>
               My name is Tyler McKenna and I am a software engineer based in
-              Boston, Massachusetts and I am passionate about helping clients
-              and businesses increase their web presence by building responsive
-              and beautiful websites.
+              Boston, Massachusetts. I am passionate about helping clients and
+              businesses increase their web presence by building responsive and
+              beautiful websites.
             </p>
             <div class="content">
               <p>
