Made changes to the body text content of the page to make it sound more professional. Removed my resume so that I can send it to specific companies in the future

--- a/index.html
+++ b/index.html
@@ -233,27 +233,26 @@
             </header>
             <hr />
             <p>
-              My name is Tyler McKenna and I am a software engineer based in
-              Boston, Massachusetts. I am passionate about helping clients and
-              businesses increase their web presence by building responsive and
-              beautiful websites.
+              My name is Tyler McKenna. As a software engineer based in Boston,
+              Massachusetts, I am dedicated to assisting clients and businesses
+              in enhancing their online presence through the creation of
+              responsive and visually appealing websites.
             </p>
             <div class="content">
               <p>
-                I went to The New England Institute of Art and received my
-                degree in Digital Art and Animation. During my schooling I
-                learned many software suites including the Adobe Creative Suite,
-                3Ds Max, Maya, and more. A chunk of my courses were in web
-                design, web development, and programming to make rudimentary
-                websites. This was the first spark of a life-long passion for
-                web development.
+                I am a graduate of The New England Institute of Art, where I
+                obtained my degree in Digital Art and Animation. Throughout my
+                education, I acquired proficiency in a variety of software
+                suites, including the Adobe Creative Suite, 3Ds Max, Maya, and
+                others. Additionally, a significant portion of my coursework was
+                focused on web design, web development, and programming, which
+                served as the foundation for my passion for web development.
               </p>
               <p>
-                When I am not writing code you can typically find me making
-                playlists, reading books, gaming, playing guitar, creating art,
-                or endlessly scrolling Instagram. Most recently, I have gotten
-                really into collecting sneakers. My wallet does not appreciate
-                it.
+                In my leisure time, I enjoy creating playlists, reading, gaming,
+                playing guitar, making art and browsing Instagram. Recently, I
+                have taken an interest in sneaker collecting, although it does
+                not bode well for my wallet.
               </p>
             </div>
             <div class="button more">
@@ -267,19 +266,6 @@
           </div>
         </div>
         <div class="about-buttons">
-          <div class="button">
-            <a
-              href="./files/Tyler_McKenna_Resume.pdf"
-              target="_blank"
-              type="button"
-              class="cta"
-              ><img
-                class="button-image"
-                src="./Images/icon-download.png"
-                alt="Download Icon"
-              />Resume</a
-            >
-          </div>
           <div class="button">
             <a href="#contact" type="button" class="cta">Contact Me</a>
           </div>
@@ -428,24 +414,32 @@
           </header>
           <hr />
           <p>
-            If you or someone you know needs to show a client what you can
-            provide, how will you show them? How will your website draw them in?
-            What happens if they look at your site on a phone? A tablet?
+            My mission is to empower businesses and individuals by creating
+            visually appealing, responsive, and accessible websites that
+            effectively showcase their brand and offerings. We strive to exceed
+            client expectations through clear communication, timely delivery,
+            and ongoing support.
           </p>
           <p>
-            It is crucial that the websites that represent us and our business
-            are responsive and accessible. Responsive design allows your website
-            content to flow freely across all screen resolutions and sizes, and
-            renders it to look great on all devices. It also makes it
-            unnecessary to maintain different versions of your website for
-            mobile and desktop and saves you time, resources and efforts.
+            When presenting your business to potential clients, it is crucial to
+            have a website that effectively showcases your offerings and draws
+            them in. An important aspect to consider is the responsiveness and
+            accessibility of your website.
           </p>
           <p>
-            Accessibility means that all people can perceive, understand,
-            navigate, and interact with electronic information and be active,
-            contributing members of the digital world. Visual, auditory,
-            physical, speech, cognitive, and neurological disabilities should be
-            taken into account when implementing accessibility measures.
+            Responsive design ensures that the content on your website is easily
+            viewable on a variety of screen resolutions and sizes, including
+            smartphones and tablets. This eliminates the need for maintaining
+            separate versions of your website for mobile and desktop, saving
+            time, resources, and effort.
+          </p>
+          <p>
+            Accessibility is the practice of making electronic information and
+            interfaces available to all individuals, including those with
+            visual, auditory, physical, speech, cognitive, and neurological
+            disabilities. By incorporating accessibility measures, your website
+            can be easily perceived, understood, navigated, and interacted with
+            by all users, allowing for equal participation in the digital world.
           </p>
         </div>
       </section>
@@ -479,9 +473,10 @@
             </header>
             <hr />
             <p>
-              I dedicate myself to meet and exceed my clients initial vision of
-              their passion project. Knowing what to expect when we work
-              together is critical - here is how I deliver success:
+              As a dedicated professional, my goal is to surpass my clients'
+              expectations for their passion projects. To ensure a successful
+              outcome, clear communication and understanding of the process is
+              essential. My approach includes the following steps:
             </p>
 
             <h4>
@@ -493,10 +488,10 @@
               ><strong>Consultation</strong>
             </h4>
             <p>
-              We will discuss your project with a problem-solving attitude to
-              suggest, recommend, and design the best solution for your project
-              while I focus on writing the code that meets the project's
-              specifications and your needs.
+              During this phase, we will discuss your project and identify the
+              best solution for your needs. I will provide suggestions and
+              recommendations, and focus on writing the code that meets the
+              project's specifications.
             </p>
             <h4>
               <span
@@ -507,10 +502,9 @@
               ><strong>Planning</strong>
             </h4>
             <p>
-              After we decide what you want your dream project to be, I will
-              begin the planning phase. I will draw up a proposal for you that
-              includes a visual preview, a plan of action, and a creation
-              timeline.
+              Once we have a clear understanding of your desired outcome, I will
+              begin the planning phase. This will include a proposal with a
+              visual preview, a plan of action, and a timeline for completion.
             </p>
             <h4>
               <span
@@ -521,11 +515,10 @@
               ><strong>Creation</strong>
             </h4>
             <p>
-              Once we come to an agreement with the proposal, I will begin to
-              create your project. I will give frequent updates of progress made
-              along the way. Communication is key at this stage and I will make
-              sure that you are aware of any hurdles and milestones as I create
-              and test your project.
+              Upon agreement of the proposal, I will proceed with creating your
+              project. I will provide regular updates on progress and
+              communicate any obstacles or milestones that arise during the
+              creation and testing phase.
             </p>
             <h4>
               <span
@@ -536,11 +529,10 @@
               ><strong>Launch</strong>
             </h4>
             <p>
-              Once I have completed the project that represents your final
-              vision, we will go over your project one last time. If everything
-              is up to both of our standards we will launch your project and I
-              will provide ongoing support in accordance to our initial
-              agreement.
+              Upon completion of the project, we will conduct a final review to
+              ensure that it meets both of our standards. If satisfactory, the
+              project will be launched and I will provide ongoing support as
+              outlined in our initial agreement.
             </p>
           </div>
         </div>
