Updated SEO tags

--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tyler is Coding</title>
+    <title>Tyler McKenna | Full Stack Web Developer</title>
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="icon" href="./images/tab-icon.png" />
-
+    <meta
+      name="description"
+      content="Tyler McKenna is a full stack web developer with experience in creating responsive and user-friendly websites. Visit tyleriscoding.com to see his portfolio and contact him for your web development needs."
+    />
+    <meta
+      name="keywords"
+      content="Tyler McKenna, Tyler is Coding, full stack web developer, web development, responsive websites, user-friendly websites, portfolio"
+    />
     <!--  Essential META Tags -->
     <meta property="og:title" content="Tyler is Coding" />
     <meta property="og:type" content="website" />
+
     <meta
       property="og:image"
       content="https://www.tyleriscoding.com/images/site-preview-image.png"
