Changed styling on project titles

--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
                 <section class="projects container">
                     <div class="project-item">
                         <h1 class="project-item-header">
-                            Jessi<span class="pinkh1">N</span>aff<span
-                                class="span pinkh1"
-                                >.</span
-                            >com
+                            <span class="pinkh1">J</span>essi<span
+                                class="pinkh1"
+                                >N</span
+                            >aff<span class="span pinkh1">.</span>com
                         </h1>
                         <img
                             id="jessinaff-img"
@@ -339,7 +339,8 @@
                     </div>
                     <div class="project-item">
                         <h1 class="project-item-header">
-                            Ques<span class="pinkh1">t</span> Log
+                            <span class="pinkh1">Q</span>uest
+                            <span class="pinkh1">L</span>og
                         </h1>
                         <img
                             id="questlog-img"
@@ -380,7 +381,8 @@
                     </div>
                     <div class="project-item">
                         <h1 class="project-item-header">
-                            Silverpoin<span class="pinkh1">t</span> Sneakers
+                            <span class="pinkh1">S</span>ilverpoint
+                            <span class="pinkh1">S</span>neakers
                         </h1>
                         <img
                             id="silverpoint-img"
@@ -423,7 +425,10 @@
                 <section class="projects container">
                     <div class="project-item">
                         <h1 class="project-item-header">
-                            Paterro<span class="pinkh1">'</span>s Kitchen
+                            <span class="pinkh1">P</span>aterro<span
+                                class="pinkh1"
+                                >'</span
+                            >s <span class="pinkh1">K</span>itchen
                         </h1>
                         <img
                             id="bartender-img"
@@ -464,7 +469,8 @@
                     </div>
                     <div class="project-item">
                         <h1 class="project-item-header">
-                            Spectra<span class="pinkh1">l</span> Salon
+                            <span class="pinkh1">S</span>pectral
+                            <span class="pinkh1">S</span>alon
                         </h1>
                         <img
                             id="salon-img"
