Rehosted portfolio piece Gifs

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                         <img
                             id="silverpoint-img"
                             class="project-img"
-                            src="https://thumbs.gfycat.com/AdvancedVictoriousAcouchi-size_restricted.gif"
+                            src="https://media2.giphy.com/media/h1lhcl4QKyYUBZzsXS/giphy.gif"
                             alt="Silverpoint"
                         />
                         <p>
@@ -433,7 +433,7 @@
                         <img
                             id="bartender-img"
                             class="project-img"
-                            src="https://thumbs.gfycat.com/MetallicDisgustingIridescentshark-size_restricted.gif"
+                            src="https://media1.giphy.com/media/3awpsdkMGW0k0ByFDC/giphy.gif"
                             alt="Paterro's Kitchen"
                         />
                         <p>
@@ -475,7 +475,7 @@
                         <img
                             id="salon-img"
                             class="project-img"
-                            src="https://thumbs.gfycat.com/ContentWeeAchillestang-size_restricted.gif"
+                            src="https://media2.giphy.com/media/i2xKS6kuzYH8EvM3GY/giphy.gif"
                             alt="Spectral Salon"
                         />
 
