--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                             </div>
                             <div class="social-item">
                                 <a
-                                    href="https://www.linkedin.com/in/tyler-is-coding/"
+                                    href="https://www.linkedin.com/in/tyleriscoding/"
                                     target="_blank"
                                     ><img
                                         src="/Images/icon-linkedin.png"
